--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,4 +1,20 @@
 .menuLink{
    display: flex;
-    justify-content: space-around
+    justify-content: space-around;
+}
+.menu{
+   display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+}
+.imgMenuSablier{
+    width: 100px;
+}
+.oneLink{
+    margin: 30px;
+    color: black;
+    text-decoration: none;
+}
+.oneLink:hover{
+  font-size: 17px;
 }
